--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -28,7 +28,7 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install --upgrade wheel setuptools
           pip install tox
-          pip install -r requirements.txt
+          pip install -r backend/requirements.txt
       - name: Run tox
         # Skip tox for now!
         run: tox --notest
