--- a/docker/refill-api/Dockerfile
+++ b/docker/refill-api/Dockerfile
@@ -6,19 +6,22 @@ WORKDIR /opt/app
 
 COPY . .
 
-RUN apk add --no-cache --virtual .build-deps build-base linux-headers && \
-	pip --no-cache-dir install -r requirements.txt && \
-	pip --no-cache-dir install uwsgi && \
-	apk del .build-deps && \
-	rm -rf /var/cache/apk/*
+RUN apk add --no-cache --virtual .build-deps build-base linux-headers
+RUN python -m pip --no-cache-dir install --upgrade pip wheel setuptools
+RUN pip --no-cache-dir install -r requirements.txt
+RUN pip --no-cache-dir install uwsgi
+RUN apk del .build-deps
+RUN rm -rf /var/cache/apk/*
 
-RUN chgrp users /opt/app && \
-	chmod g+rwx /opt/app && \
-	cd /opt/app && \
-	cp celeryconfig.docker.py celeryconfig.py && \
-	rm -rf pywikibot.lwp throttle.ctrl apicache-py3
+RUN chgrp users /opt/app
+RUN chmod g+rwx /opt/app
+RUN cd /opt/app
+RUN cp celeryconfig.docker.py celeryconfig.py
+RUN rm -rf pywikibot.lwp throttle.ctrl apicache-py3
 
-ENV UWSGI_ARGS="--http 127.0.0.1:8001"
+ENV UWSGI_ARGS="--http 0.0.0.0:8001"
+
+EXPOSE 8001
 
 USER guest:users
 CMD [ "sh", "-c", "uwsgi --plugins python3 --wsgi app:app --chdir /opt/app $UWSGI_ARGS" ]
