--- a/docker/refill-worker/Dockerfile
+++ b/docker/refill-worker/Dockerfile
@@ -6,16 +6,17 @@ WORKDIR /opt/app
 
 COPY . .
 
-RUN apk add --no-cache --virtual .build-deps build-base && \
-	pip --no-cache-dir install -r requirements.txt && \
-	apk del .build-deps && \
-	rm -rf /var/cache/apk/*
+RUN apk add --no-cache --virtual .build-deps build-base
+RUN python -m pip --no-cache-dir install --upgrade pip wheel setuptools
+RUN pip --no-cache-dir install -r requirements.txt
+RUN apk del .build-deps
+RUN rm -rf /var/cache/apk/*
 
-RUN chgrp users /opt/app && \
-	chmod g+rwx /opt/app && \
-	cd /opt/app && \
-	cp celeryconfig.docker.py celeryconfig.py && \
-	rm -rf pywikibot.lwp throttle.ctrl apicache-py3
+RUN chgrp users /opt/app
+RUN chmod g+rwx /opt/app
+RUN cd /opt/app
+RUN cp celeryconfig.docker.py celeryconfig.py
+RUN rm -rf pywikibot.lwp throttle.ctrl apicache-py3
 
 USER guest:users
 CMD [ "celery", "--autoscale=100,10", "worker"]
