--- a/backend/docker/refill-worker/Dockerfile
+++ b/backend/docker/refill-worker/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /opt/app
 
 COPY . .
 
-RUN apk add --no-cache --virtual .build-deps build-base
+RUN apk add --no-cache --virtual .build-deps build-base redis
 RUN python -m pip --no-cache-dir install --upgrade pip wheel setuptools
 RUN pip --no-cache-dir install -r requirements.txt
 RUN apk del .build-deps
@@ -19,4 +19,4 @@ RUN cp celeryconfig.docker.py celeryconfig.py
 RUN rm -rf pywikibot.lwp throttle.ctrl apicache-py3
 
 USER guest:users
-CMD [ "celery", "--autoscale=100,10", "worker"]
+CMD [ "celery", "worker", "--autoscale=100,10"]
