--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,14 @@
 skipsdist = True
 envlist = flake8, black, isort
 
+[testenv:fix]
+commands =
+    black backend
+    isort backend
+deps =
+    black
+    isort
+
 [testenv:flake8]
 # Example usage:
 #
