--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,8 @@ exclude =
     .venv,
     .tox,
     *.egg,
-    __pycache__
+    __pycache__,
+    web
 max-line-length = 286
 ignore =
     E121,
