--- a/web/package.json
+++ b/web/package.json
@@ -6,41 +6,39 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack serve --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.2.5",
-    "axios": "^0.21.2",
-    "banana-i18n": "^2.0.0",
-    "js-cookie": "^2.1.4",
-    "localforage": "^1.7.3",
-    "lodash": "^4.17.21",
-    "oboe": "^2.1.3",
-    "urijs": "^1.19.7",
-    "vue": "^2.5.21",
-    "vue-banana-i18n": "^1.3.0",
+    "@vue/compiler-sfc": "^3.2.35",
+    "axios": "^0.21.4",
+    "banana-i18n": "^2.3.3",
+    "core-js": "^3.22.5",
+    "js-cookie": "^2.2.1",
+    "localforage": "^1.10.0",
+    "oboe": "^2.1.5",
+    "urijs": "^1.19.11",
+    "vue": "^2.6.14",
+    "vue-banana-i18n": "^1.5.2",
     "vue-config": "^1.0.0",
-    "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.2",
-    "vuetify": "^1.4.0"
+    "vue-loader": "^15.9.6",
+    "vue-loader-plugin": "^1.3.0",
+    "vue-resource": "^1.5.3",
+    "vue-router": "^3.5.4",
+    "vuetify": "^2.6.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.14",
-    "@babel/preset-env": "^7.13.12",
-    "babel-loader": "^8.2.2",
+    "@babel/preset-env": "^7.18.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.2.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.1",
-    "node-sass": "^7.0.0",
-    "require-all": "^3.0.0",
-    "sass-loader": "^11.0.1",
-    "style-loader": "^2.0.0",
-    "vue-loader": "^15.9.6",
-    "vue-template-compiler": "^2.2.1",
-    "webpack": "^5.28.0",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^4.9.0",
-    "webpack-material-design-icons": "^0.1.0"
+    "css-loader": "^6.7.1",
+    "deepmerge": "^4.2.2",
+    "html-webpack-plugin": "^5.5.0",
+    "laravel-mix": "^6.0.43",
+    "sass": "^1.52.1",
+    "sass-loader": "^13.0.0",
+    "style-loader": "^3.3.1",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0"
   }
 }
