Add eslint job, will fail

--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack serve --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress"
+    "build": "cross-env NODE_ENV=production webpack --progress",
+    "test": "eslint src libs"
   },
   "dependencies": {
     "@vue/compiler-sfc": "^3.2.35",
@@ -31,6 +32,8 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "deepmerge": "^4.2.2",
+    "eslint": "^8.16.0",
+    "eslint-plugin-vue": "^9.0.1",
     "html-webpack-plugin": "^5.5.0",
     "laravel-mix": "^6.0.43",
     "sass": "^1.52.1",
